[package]
name = "zoe-state-machine"
version = "0.1.0"
edition = "2024"

[features]
default = []
frb-api = ["dep:flutter_rust_bridge","zoe-app-primitives/frb-api"]

[dependencies]
# App primitives for common types
zoe-app-primitives = { path = "../app-primitives" }
zoe-wire-protocol = { path = "../wire-protocol" }
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
libcrux-ml-dsa = { workspace = true }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand_chacha = "0.3"
postcard = "1.0"
# AES-GCM removed - only using ChaCha20-Poly1305 from wire-protocol
rand = "0.8"
thiserror = "1.0"
async-broadcast = { workspace = true }
async-trait = "0.1"


flutter_rust_bridge = { workspace = true, optional = true }


[dev-dependencies]
rand = "0.8"
chrono = "0.4"
hex = "0.4"
tokio = { version = "1.0", features = ["macros", "rt"] }




[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }