[package]
name = "whatsmeow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
chrono = "0.4"
qrcode = "0.14"

[build-dependencies]
bindgen = "0.69"

[features]
default = []
e2e-real-ffi = []
