[package]
name = "whatsmeow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
chrono = { workspace = true }
qrcode = "0.14"

[build-dependencies]
bindgen = "0.69"

[features]
default = []
e2e-real-ffi = []
