[package]
name = "whatsmeow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
chrono = { workspace = true }
qrcode = "0.14"
lazy_static = "1.4"

[build-dependencies]
bindgen = "0.69"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
mock-ffi = []
e2e-real-ffi = []
