[package]
name = "zoe-wire-protocol"
version = "0.1.0"
edition = "2021"
description = "Zoe wire protocol with dynamic authentication, ed25519-derived TLS certificates, and relay service definitions"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }
heapless = "0.7.2"

# Cryptography
ed25519-dalek = { workspace = true, features = ["serde", "pkcs8"] }
chacha20poly1305 = "0.10"
bip39 = "2.0"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rand = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing
blake3 = { workspace = true }

# QUIC transport
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = "0.12"

# Networking utilities
socket2 = "0.5"

# Certificate parsing
x509-parser = "0.16"
hex = { workspace = true }
uuid = { workspace = true }

# Encoding
base64 = "0.21"

# Logging
tracing = { workspace = true }

# Async utilities  
async-trait = { workspace = true }

# RPC framework
tarpc = { workspace = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
test-case = { workspace = true }
proptest = "1.0"
quickcheck = "1.0"
mockall = "0.12"
tempfile = { workspace = true }
serial_test = { workspace = true }

# Assertion utilities
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

# Additional testing utilities
criterion = "0.5"
hex-literal = "0.4"
chrono = { workspace = true }

[features]
default = []
client = []
server = []
