[package]
name = "zoe-wire-protocol"
version = "0.1.0"
edition = "2021"
description = "Zoe wire protocol with dynamic authentication, ML-DSA post-quantum TLS certificates, and relay service definitions"
license = "MIT OR Apache-2.0"


[features]
default = []
client = []
server = []
tls-ml-dsa-44 = []  # Enable ML-DSA-44 post-quantum transport security


[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }

# Serialization
serde = { workspace = true }
postcard = { workspace = true }
heapless = "0.7.2"

# Cryptography
ml-dsa = { workspace = true }
ml-kem = "0.2.1"
ed25519-dalek = { workspace = true }  # Still needed for TLS certificate compatibility
signature = { workspace = true }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = "4.0"
chacha20poly1305 = "0.10"
bip39 = "2.0"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
rand = { workspace = true }
rand_chacha = "0.3"
forward-compatible-enum = { path = "../forward-compatible-enum" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing
blake3 = { workspace = true }

# QUIC transport
quinn = { workspace = true }
rustls = { workspace = true, features = ["std", "prefer-post-quantum"] }
rustls-pki-types = "1.12"
rustls-webpki = "0.103"
rcgen = "0.12"

# Networking utilities
socket2 = "0.5"

# Certificate parsing and generation
x509-parser = "0.16"
x509-cert = "0.2"
der = "0.7"
const-oid = "0.9"
hex = { workspace = true }
uuid = { workspace = true }

# Encoding
base64 = "0.21"

# Logging
tracing = { workspace = true }

# Async utilities  
async-trait = { workspace = true }

# RPC framework
tarpc = { workspace = true }

[dev-dependencies]
# Testing framework
tokio-test = { workspace = true }
test-case = { workspace = true }
proptest = "1.0"
quickcheck = "1.0"
mockall = "0.12"
tempfile = { workspace = true }
serial_test = { workspace = true }

# Assertion utilities
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }

# Additional testing utilities
criterion = "0.5"
hex-literal = "0.4"
chrono = { workspace = true }
