[package]
name = "zoe-e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Core zoe crates we're testing
zoe-relay = { path = "../../crates/relay" }
zoe-client = { path = "../../crates/client", features = ["test-utils"] }
zoe-client-storage = { path = "../../crates/client-storage" }
zoe-blob-store = { path = "../../crates/blob-store" }
zoe-message-store = { path = "../../crates/message-store" }
zoe-wire-protocol = { path = "../../crates/wire-protocol" }
zoe-app-primitives = { path = "../../crates/app-primitives" }
zoe-state-machine = { path = "../../crates/state-machine" }

# Workspace dependencies  
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libcrux-ml-dsa = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
pretty_assertions = { workspace = true }
tarpc = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
postcard = { workspace = true }
forward-compatible-enum = { path = "../../crates/forward-compatible-enum" }
rustls = { workspace = true }
quinn = { workspace = true }
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
ed25519-dalek = { workspace = true }
env_logger = { workspace = true }
async-broadcast = { workspace = true }

# Redis client for message store tests
redis = { workspace = true, features = ["tokio-comp"] }
